--- a/thewhistle/pubspec.yaml
+++ b/thewhistle/pubspec.yaml
@@ -18,10 +18,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   provider: ^5.0.0
+  firebase_core: ^1.3.0
+  firebase_auth: ^1.4.1
+  get_it: ^7.1.4
   flutter:
     sdk: flutter
 
@@ -46,8 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/Logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
